--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Ishmael's World</title>
+    <!-- Add something here to fix trademark -->
   <head>
   <body>
     <h1>hello, world</h1>
